--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,12 +9,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup .NET
+      - uses: actions/checkout@v3      - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: "7.0.x" # Update to match your project's .NET version
+          dotnet-version: "9.0.x" # Using .NET 9.0 to match your project
 
       - name: Restore dependencies
         run: dotnet restore
