--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
@@ -30,7 +31,7 @@ jobs:
 
       - name: Change base tag in index.html
         run: |
-          find publish/wwwroot -name "index.html" -exec sed -i 's/<base href="\/" \/>/<base href="\/${{ github.event.repository.name }}\/" \/>/g' {} \;
+          find publish/wwwroot -name "index.html" -exec sed -i 's|<base href="/" />|<base href="/${{ github.event.repository.name }}/" />|g' {} \;
 
       - name: Add .nojekyll file
         run: touch publish/wwwroot/.nojekyll
